infrastructure/kubernetes/monitoring-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-service
  namespace: monitoring-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-service
  template:
    metadata:
      labels:
        app: monitoring-service
    spec:
      containers:
        - name: monitoring-service
          image: monitoring/monitoring-service:0.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8282
